ch03/blue-green/blue.yaml
kind: Pod
apiVersion: v1
metadata:
  name: blue-app
  labels:
    app: blue
spec:
  containers:
  - name: blue-app
    image: nginxdemos/hello:plain-text
    imagePullPolicy: Always
    ports:
    - name: http
      containerPort: 80
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: blue-service
spec:
  selector:
    app: blue
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ing
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/blue"
        backend:
          service:
            name: blue-service
            port:
              number: 80
