ch03/blue-green/bluegreen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/blue-green"
        backend:
          service:
            name: bluegreen-demo
            port:
              number: 8080
