ch03/blue-green/bluegreen-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo-preview
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/blue-green-preview"
        backend:
          service:
            name: bluegreen-demo-preview
            port:
              number: 80
