ch03/blue-green/bluegreen.yaml
kind: Pod
apiVersion: v1
metadata:
  name: blue-app
  labels:
    app: blue
spec:
  containers:
  - name: blue-app
    image: argoproj/rollouts-demo:blue
    imagePullPolicy: Always
    ports:
    - name: http
      containerPort: 8080
      protocol: TCP
    resources:
      requests:
        memory: 32Mi
        cpu: 5m
---
kind: Service
apiVersion: v1
metadata:
  name: blue-service
spec:
  selector:
    app: blue
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
---
kind: Pod
apiVersion: v1
metadata:
  name: green-app
  labels:
    app: green
spec:
  containers:
  - name: green-app
    image: argoproj/rollouts-demo:green
    imagePullPolicy: Always
    ports:
    - name: http
      containerPort: 8080
      protocol: TCP
    resources:
      requests:
        memory: 32Mi
        cpu: 5m
---
kind: Service
apiVersion: v1
metadata:
  name: green-service
spec:
  selector:
    app: green
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/blue"
        backend:
          service:
            name: blue-service
            port:
              number: 80
      - pathType: Prefix
        path: "/green"
        backend:
          service:
            name: green-service
            port:
              number: 80
---
