ch03/blue-green/hello.yaml
kind: Pod
apiVersion: v1
metadata:
  name: hello-app
  labels:
    app: hello
spec:
  containers:
  - name: hello-app
    # image: nginxdemos/hello:latest
    image: paulbouwer/hello-kubernetes:1.10
    imagePullPolicy: Always
    ports:
    - name: http
      containerPort: 8080
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  rules:
    - host: hello.boriphuth.trueddns.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: hello-service
                port:
                  number: 80
  tls:
  - secretName: hello-cert
    hosts:
    - hello.boriphuth.trueddns.com
