ch03/blue-green/text.yaml
kind: Pod
apiVersion: v1
metadata:
  name: text-app
  labels:
    app: text
spec:
  containers:
  - name: text-app
    # image: nginxdemos/hello:plain-text
    image: argoproj/rollouts-demo:blue
    imagePullPolicy: Always
    ports:
    - name: http
      # containerPort: 80
      containerPort: 8080
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: text-service
spec:
  selector:
    app: text
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: text-ing
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/text"
        backend:
          service:
            name: text-service
            port:
              number: 8080
